--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -33,7 +33,7 @@
         <link rel="stylesheet" href="/font/bootstrap-icons.min.css" />
 
         <!-- Libraries Stylesheet -->
-        <link
+        <link1
             href="/lib/owlcarousel/assets/owl.carousel.min.css"
             rel="stylesheet"
         />
