--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -244,7 +244,7 @@
                     },
                 });
 
-
+                $("#validation-form").submit(function (event) {
 
 
                     const deli =
@@ -263,7 +263,7 @@
                     }
                     console.log(a.settings.whitelist);
                 });
-            // });
+            });
 
             let arcccList = await getArchitecturelist();
 
