--- a/src/main/resources/templates/404.html
+++ b/src/main/resources/templates/404.html
@@ -30,6 +30,9 @@
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
     <script src="/js/logout-modal.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/animate.css@3.7.2/animate.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.15.5/dist/sweetalert2.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@10.15.5/dist/sweetalert2.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -129,7 +132,6 @@
     $(document).ready(function () {
         setupLogoutConfirmation();
     });
-
 </script>
 </body>
 
