--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -371,7 +371,6 @@
                 }
                 
             }
-
             function validatePhone() {
                 const phone = $('#client-phone').val();
                 const errorContainer = $('#client-phone').siblings('.error-container');
@@ -400,8 +399,6 @@
                     $('#client-phone').removeClass('is-invalid');
                 }
             }
-
-
             function validateClient() {
            validateName();
            validateEmail();
@@ -420,10 +417,8 @@
 
         $('#client-phone').on('input', function () {
             validatePhone();
-        });            
+        });
 
-
-            // SAVE CLIENT
             document
                 .querySelector("#client-form")
                 .addEventListener("submit", function (e) {
@@ -433,39 +428,52 @@
                     let email = document.querySelector("#client-email").value;
                     let phone = document.querySelector("#client-phone").value;
 
-                    if(!validateClient()){
+                    if (!validateClient()) {
                         return;
                     }
 
-                    const clientDto = {
-                        name: name,
-                        email: email,
-                        phone: phone,
-                    };
+                    Swal.fire({
+                        title: "Are you sure want to add?",
+                        icon: "warning",
+                        showCancelButton: true,
+                        confirmButtonColor: "#3085d6",
+                        cancelButtonColor: "#d33",
+                        confirmButtonText: "Yes"
+                    }).then((result) => {
+                        if (result.isConfirmed) {
+                            const clientDto = {
+                                name: name,
+                                email: email,
+                                phone: phone,
+                            };
 
-                    console.log(clientDto)
+                            console.log(clientDto);
 
-                    $.ajax({
-                      method: "POST",
-                        url: "/api/client/save",
-                        data : JSON.stringify(clientDto),
-                        contentType: "application/json; charset=utf-8",
-                        dataType: "json",
-                        success: function (response) {
-                            console.log(response);
-                            const option = document.createElement("option");
-                            option.value = JSON.stringify(response);
-                            option.textContent = response.name;
-                            clientSelect.append(option);
-                            document.querySelector("#client-name").value = "";
-                            document.querySelector("#client-email").value = "";
-                            document.querySelector("#client-phone").value = "";
-                        },
-                        error: function (error) {
-                            console.error("Error in Url : /api/cleient/save ", error);
-                        },
-                    })
+                            $.ajax({
+                                method: "POST",
+                                url: "/api/client/save",
+                                data: JSON.stringify(clientDto),
+                                contentType: "application/json; charset=utf-8",
+                                dataType: "json",
+                                success: function (response) {
+                                    console.log(response);
+                                    const option = document.createElement("option");
+                                    option.value = JSON.stringify(response);
+                                    option.textContent = response.name;
+                                    clientSelect.append(option);
+                                    document.querySelector("#client-name").value = "";
+                                    document.querySelector("#client-email").value = "";
+                                    document.querySelector("#client-phone").value = "";
+                                    showSuccess('Client Edit Successfully...');
+                                },
+                                error: function (error) {
+                                    console.error("Error in Url : /api/client/save ", error);
+                                },
+                            });
+                        }
+                    });
                 });
+
 
             const projectObjectiveEditor =
                 document.querySelector(".quill-editor-full");
@@ -1578,154 +1586,98 @@
 
 
 
-                $("#project-add-btn").on('click', function (event) {
-                    console.log("submitted")
-                    event.preventDefault(); // Prevent the form from submitting the traditional way
 
 
-                    if (!validateProject()) {
-                        return;
+                // document.querySelector("#update-amount-btn").addEventListener("click", function (e) {
+                //
+                //     const projectId = parseInt(document.querySelector("#current-edditing-projetc-id").value)
+                //
+                //     const amountDto = {
+                //         basic_design: parseInt(document.querySelector("#edit-basic-design-count").value),
+                //         detail_design: parseInt(document.querySelector("#edit-detail-design-count").value),
+                //         coding: parseInt(document.querySelector("#edit-coding-count").value),
+                //         unit_testing: parseInt(document.querySelector("#edit-unit-testing-count").value),
+                //         integrated_testing: parseInt(document.querySelector("#edit-integrated-testing-count").value)
+                //     }
+                //
+                //     Swal.fire({
+                //         title: "Are you sure want to update project amount?",
+                //         icon: "warning",
+                //         showCancelButton: true,
+                //         confirmButtonColor: "#3085d6",
+                //         cancelButtonColor: "#d33",
+                //         confirmButtonText: "Yes"
+                //     }).then((result) => {
+                //         if (result.isConfirmed) {
+                //             $.ajax({
+                //                 url: `/api/project/update/amount/${projectId}`, // Replace with the actual URL for your project registration endpoint
+                //                 type: "PUT",
+                //                 data: JSON.stringify(amountDto),
+                //                 dataType: "json",
+                //                 contentType: "application/json; charset=utf-8",
+                //                 success: async function (data) {
+                //                     Swal.fire("Success", "Project amount updated successfully", "success");
+                //                     // Reset the form if needed
+                //                     console.log("This project has been saved", data);
+                //                     // event.currentTarget.submit();
+                //                     window.top.location = window.top.location;
+                //                 },
+                //                 error: function (data) {
+                //                     Swal.fire("Error", "Error updating project amount", "error");
+                //                     // event.currentTarget.submit();
+                //                     window.top.location = window.top.location;
+                //                 },
+                //             });
+                //         }
+                //     });
+                // });
+
+                document.querySelector("#update-amount-btn").addEventListener("click", function (e) {
+
+                    const projectId = parseInt(document.querySelector("#current-edditing-projetc-id").value)
+
+                    const amountDto = {
+                        basic_design: parseInt(document.querySelector("#edit-basic-design-count").value),
+                        detail_design: parseInt(document.querySelector("#edit-detail-design-count").value),
+                        coding: parseInt(document.querySelector("#edit-coding-count").value),
+                        unit_testing: parseInt(document.querySelector("#edit-unit-testing-count").value),
+                        integrated_testing: parseInt(document.querySelector("#edit-integrated-testing-count").value)
                     }
 
-                    const projectName = $("#name").val();
-                    const client = JSON.parse($("#client").val());
-                    const startDate = new Date(
-                        $("#start_date").val()
-                    ).getTime();
-                    const duration = +$("#project-add-duration").val();
-
-                    const background = $("#background").val();
-                    let architectures = $("#architectures").val();
-                    const empList = empTagifyList.selectedValues;
-                    console.log("architectures list : ", architectures);
-                    const systemOutlines = sysSelect.selectedValues;
-                    const deliverable = $("#deliverable").val();
-                    const objective = addObjectiveEditor.root.innerHTML; // Assuming you're using a WYSIWYG editor like Quill
-                    console.log(
-                        projectName,
-                        client,
-                        startDate,
-                        duration,
-                        background,
-                        architectures,
-                        empList,
-                        systemOutlines,
-                        deliverable,
-                        objective
-                    );
-
-
-
-
-                    let jsonData = ''; // replace with your actual JSON data
-                    if (jsonData.trim() !== '') {
-                        try {
-                            let parsedData = JSON.parse(jsonData);
-                            // Continue processing parsedData
-                        } catch (error) {
-                            console.error('Error parsing JSON:', error);
+                    Swal.fire({
+                        title: "Are you sure want to update project amount?",
+                        icon: "warning",
+                        showCancelButton: true,
+                        confirmButtonColor: "#3085d6",
+                        cancelButtonColor: "#d33",
+                        confirmButtonText: "Yes"
+                    }).then((result) => {
+                        if (result.isConfirmed) {
+                            $.ajax({
+                                url: `/api/project/update/amount/${projectId}`, // Replace with the actual URL for your project registration endpoint
+                                type: "PUT",
+                                data: JSON.stringify(amountDto),
+                                dataType: "json",
+                                contentType: "application/json; charset=utf-8",
+                                success: async function (data) {
+                                    Swal.fire("Success", "Project amount updated successfully", "success");
+                                    // Reset the form if needed
+                                    console.log("This project has been saved", data);
+                                    // event.currentTarget.submit();
+                                    window.top.location = window.top.location;
+                                },
+                                error: function (data) {
+                                    Swal.fire("Error", "Error updating project amount", "error");
+                                    // event.currentTarget.submit();
+                                    window.top.location = window.top.location;
+                                },
+                            });
                         }
-                    } else {
-                        console.warn('JSON data is empty.');
-                    }
-
-
-                    architectures = JSON.parse(architectures);
-
-                    const arcList = architectures.map((ar) => {
-                        const matchingObj = arcccList.find(
-                            (arccObj) => arccObj.tech_name === ar.value
-                        );
-                        console.log(matchingObj);
-                        return matchingObj
-                            ? matchingObj
-                            : { tech_name: ar.value };
-                    });
-
-                    const oldDeliTypeList = JSON.parse(deliverable);
-
-                    const deliverTypeList = oldDeliTypeList.map((deli) => {
-                        const matchingObj = deliTypeList.find(
-                            (deliObj) => deliObj.type === deli.value
-                        );
-                        console.log(matchingObj);
-                        return matchingObj ? matchingObj : { type: deli.value };
-                    });
-
-                    const deliverableList = deliverTypeList.map(deli => {
-                        return {
-                            status : false,
-                            deliverableType : deli
-                        }
-                    });
-
-
-
-                    if(!validateProject()){
-                        return;
-                    }
-
-                    // You may want to add some form validation here before sending the data
-                    console.log(objective);
-                    console.log(architectures);
-                    console.log(empList);
-                    console.log(deliverTypeList)
-                    const project = {
-                        name: projectName,
-                        clientDto: client,
-                        duration: duration,
-                        start_date: startDate,
-                        end_date: calculateEndDate(
-                            startDate,
-                            duration
-                        ).getTime(),
-                        background: background,
-                        architectureDto: arcList,
-                        systemOutLineDto: systemOutlines.reduce((acc, cur) => {
-                            acc[cur] = true;
-                            return acc;
-                        }, {}),
-                        current_phase: "PLANNING",
-                        deliverableDto: deliverableList,
-                        objective: objective,
-                        amountDto: {
-                            basic_design: 0,
-                            detail_design: 0,
-                            coding: 0,
-                            unit_testing: 0,
-                            integrated_testing: 0,
-                        },
-                        departmentDto: {
-                            id: loginUser.currentUser.department.id,
-                        },
-                        projectManagerUserDto: {
-                            id: loginUser.currentUser.id,
-                        },
-                        membersUserDto: empList.map((str) => ({ id: parseInt(str) })),
-                    };
-                    console.log(project);
-                    //Perform the AJAX request
-                    $.ajax({
-                        url: "/api/project/save", // Replace with the actual URL for your project registration endpoint
-                        type: "POST",
-                        data: JSON.stringify(project),
-                        dataType: "json",
-                        contentType: "application/json; charset=utf-8",
-                        success: async function (data) {
-                            alert("Project registered successfully");
-                            // Reset the form if needed
-                            $("#validation-form")[0].reset();
-                            console.log("this projce has benn saved", data);
-                            // event.currentTarget.submit();
-                            window.top.location = window.top.location;
-                        },
-                        error: function (data) {
-                            alert("Error registering project");
-                            // event.currentTarget.submit();
-                            window.top.location = window.top.location;
-                        },
                     });
                 });
+
+
+
             });
 
             let myOptions = [
@@ -1844,6 +1796,34 @@
                     });
                 }
             });
+
+            function showError(message) {
+                $("#errorText").text(message);
+                $("#errorAlert").show();
+
+                setTimeout(function () {
+                    $("#errorAlert").hide();
+                }, 3000);
+
+                //close alert box
+                $(".btn-close").on("click", function () {
+                    $("#errorAlert").hide();
+                });
+            }
+
+            function showSuccess(message) {
+                $("#successText").text(message);
+                $("#successAlert").show();
+
+                setTimeout(function () {
+                    $("#successAlert").hide();
+                }, 3000);
+
+                //close alert box
+                $(".btn-close").on("click", function () {
+                    $("#successAlert").hide();
+                });
+            }
         </script>
 
     </head>
@@ -2259,6 +2239,18 @@
                         <div class="tab-pane fade" id="client-create">
                             <div class="modal-body modal-lg-6">
                                 <form class="row g-4" id="client-form">
+                                    <div class="alert alert-danger alert-dismissible" id="errorAlert" style="display: none;">
+                                        <strong>Error : </strong> <span id="errorText"></span>
+                                        <button type="button" class="btn-close btn-dark" aria-label="close" style="background: transparent; position: absolute; top: 0; right: 0;">
+                                            &times;
+                                        </button>
+                                    </div>
+                                    <div class="alert alert-success alert-dismissible" id="successAlert" style="display: none;">
+                                        <strong>Success : </strong> <span id="successText"></span>
+                                        <button type="button" class="btn-close btn-dark" aria-label="close" style="background: transparent; position: absolute; top: 0; right: 0;">
+                                            &times;
+                                        </button>
+                                    </div>
                                     <div class="col-md-12">
                                         <label
                                             for="client-name"
