--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -844,37 +844,42 @@
 
 
                     //_______________________________________deliverable update alert box put
-                    document.querySelector("#deliverable-type-form").addEventListener("submit", function (event) {
-                        event.preventDefault();
 
-                        let deliverableList = [];
+                    if (loginUser.currentUser.role === "PROJECT_MANAGER") {
+                        const updateButtonCon = document.getElementById("updateButtonCon");
+                        updateButtonCon.innerHTML = '<button id="deliverable-type-form" type="button" class="btn btn-primary">Update</button>';
+                        document.querySelector("#deliverable-type-form").addEventListener("submit", function (event) {
+                            event.preventDefault();
 
-                        targetData.deliverableDto.forEach(a => {
-                            const checkbox = document.querySelector(`#checkbox-${a.id}`);
+                            let deliverableList = [];
 
-                            if (checkbox.checked) {
-                                deliverableList.push({id:a.id, status: true})
-                            }
-                        });
+                            targetData.deliverableDto.forEach(a => {
+                                const checkbox = document.querySelector(`#checkbox-${a.id}`);
 
-
-                        console.log("deliverable",deliverableList);
-
-                        fetch(`/api/deliverable/update-status`, {
-                            method: 'PUT',
-                            headers: {
-                                'Content-Type': 'application/json',
-                            },
-                            body: JSON.stringify(deliverableList),
-                        })
-                            .then(response => response.json())
-                            .then(data => {
-                                console.log('Status updated successfully:', data);
-                            })
-                            .catch(error => {
-                                console.error('Error updating status:', error);
+                                if (checkbox.checked) {
+                                    deliverableList.push({id: a.id, status: true})
+                                }
                             });
-                    });
+
+
+                            console.log("deliverable", deliverableList);
+
+                            fetch(`/api/deliverable/update-status`, {
+                                method: 'PUT',
+                                headers: {
+                                    'Content-Type': 'application/json',
+                                },
+                                body: JSON.stringify(deliverableList),
+                            })
+                                .then(response => response.json())
+                                .then(data => {
+                                    console.log('Status updated successfully:', data);
+                                })
+                                .catch(error => {
+                                    console.error('Error updating status:', error);
+                                });
+                        });
+                    }
 
                     //____________________________________________________deliverable update end
 
@@ -969,11 +974,10 @@
                     //______________________________________________
 
                     //_______________review update
-                    if (loginUser.currentUser.role !== "PROJECT_MANAGER") {
-                        const updateButton = document.querySelector("#updateButton");
-                        if (updateButton) {
-                            updateButton.classList.add("d-none");
-                        }
+                    if (loginUser.currentUser.role === "PROJECT_MANAGER") {
+
+                        const updateButtonContainer = document.getElementById("updateButtonContainer");
+                        updateButtonContainer.innerHTML = '<button id="updateButton" type="button" class="btn btn-primary">Update</button>';
                     document.querySelector("#updateButton").addEventListener("click", async function () {
 
                         var internalReviewCount = document.getElementById("project-internal-review-count").value;
@@ -1071,38 +1075,44 @@
                 });
             })
 
-            document.querySelector("#update-amount-btn").addEventListener("click", function (e) {
+            if (loginUser.currentUser.role === "PROJECT_MANAGER") {
 
-                const projectId = parseInt(document.querySelector("#current-edditing-projetc-id").value)
+                const updateButtonC = document.getElementById("updateButtonC");
+                updateButtonC.innerHTML = '<button id="update" type="button" class="btn btn-primary">Update</button>';
 
-                const amountDto = {
-                    basic_design: parseInt(document.querySelector("#edit-basic-design-count").value),
-                    detail_design: parseInt(document.querySelector("#edit-detail-design-count").value),
-                    coding: parseInt(document.querySelector("#edit-coding-count").value),
-                    unit_testing: parseInt(document.querySelector("#edit-unit-testing-count").value),
-                    integrated_testing: parseInt(document.querySelector("#edit-integrated-testing-count").value)
-                }
+                document.querySelector("#update").addEventListener("click", function (e) {
 
-                $.ajax({
-                    url: `/api/project/update/amount/${projectId}`, // Replace with the actual URL for your project registration endpoint
-                    type: "PUT",
-                    data: JSON.stringify(amountDto),
-                    dataType: "json",
-                    contentType: "application/json; charset=utf-8",
-                    success: async function (data) {
-                        alert("Project registered successfully");
-                        // Reset the form if needed
-                        console.log("this projce has benn saved", data);
-                        // event.currentTarget.submit();
-                        window.top.location = window.top.location;
-                    },
-                    error: function (data) {
-                        alert("Error registering project");
-                        // event.currentTarget.submit();
-                        window.top.location = window.top.location;
-                    },
-                });
-            })
+                    const projectId = parseInt(document.querySelector("#current-edditing-projetc-id").value)
+
+                    const amountDto = {
+                        basic_design: parseInt(document.querySelector("#edit-basic-design-count").value),
+                        detail_design: parseInt(document.querySelector("#edit-detail-design-count").value),
+                        coding: parseInt(document.querySelector("#edit-coding-count").value),
+                        unit_testing: parseInt(document.querySelector("#edit-unit-testing-count").value),
+                        integrated_testing: parseInt(document.querySelector("#edit-integrated-testing-count").value)
+                    }
+
+                    $.ajax({
+                        url: `/api/project/update/amount/${projectId}`, // Replace with the actual URL for your project registration endpoint
+                        type: "PUT",
+                        data: JSON.stringify(amountDto),
+                        dataType: "json",
+                        contentType: "application/json; charset=utf-8",
+                        success: async function (data) {
+                            alert("Project registered successfully");
+                            // Reset the form if needed
+                            console.log("this projce has benn saved", data);
+                            // event.currentTarget.submit();
+                            window.top.location = window.top.location;
+                        },
+                        error: function (data) {
+                            alert("Error registering project");
+                            // event.currentTarget.submit();
+                            window.top.location = window.top.location;
+                        },
+                    });
+                })
+            }
 
             const sortProjectByDepartment = await getData(
                 "/api/project/list/sort/by/department"
@@ -3145,14 +3155,8 @@
                                                     </li>
                                                 </ul>
                                                 <div class="text-center">
-                                                    <button
-                                                        class="btn btn-primary"
-                                                        style="
-                                                            background-color: #369;
-                                                        "
-                                                        id="update-amount-btn"
-                                                        >Save Amount</button
-                                                    >
+                                                    <div  id="updateButtonC">
+                                                    </div>
                                                 </div>
                                             </div>
 
@@ -3199,7 +3203,9 @@
                                                         />
                                                     </div>
                                                 </div>
-                                                <div class="text-center" id="updateButtonContainer">
+                                                <div>
+                                                <div  id="updateButtonContainer">
+                                                </div>
                                                 </div>
                                             </div>
 
@@ -3217,7 +3223,8 @@
                                                     <div id="deliverable-type">
                                                         <!-- Checkbox elements will be dynamically added here -->
                                                     </div>
-                                                    <button type="submit">Submit</button>
+                                                    <div  id="updateButtonCon">
+                                                    </div>
                                                 </form>
 
                                             </div>
