Fix some role-based UI

--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -788,6 +788,7 @@
 
             // Add a class to style the button on hover
             addTaskBtn.classList.add("disabled-button");
+            addTaskBtn.style.cursor = "not-allowed";
         }
 
         var userId;
