Fixed Manmonth api

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -420,7 +420,7 @@
         }
 
         function updateProductivityChart(selectedValue) {
-            //divide actual man month from
+            //loop through the
         }
 
         $('.chart-filter-reset-btn').on('click', function () {
