--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -231,10 +231,10 @@
 
         $('.bootstrap-table').removeClass('bootstrap4').addClass('bootstrap5');
 
-        if (event.target.classList.contains('status-switch')) {
-            //change status after clicking the switch
-
-        }
+        // if (event.target.classList.contains('status-switch')) {
+        //     //change status after clicking the switch
+        //
+        // }
 
         function getDepartmentNameList() {
             var departmentNameList = [];
@@ -312,34 +312,7 @@
         });
 
         //function show error with parameter message
-        function showError(message) {
-            $('#error-message').text(message);
-            $('#alert-danger').show();
 
-            setTimeout(function () {
-                $('#alert-danger').hide();
-            }, 1000);
-
-            //close alert box
-            $('.btn-close').click(function () {
-                $('#alert-danger').hide();
-            });
-        }
-
-        //function show success with parameter message
-        function showSuccess(message) {
-            $('#success-message').text(message);
-            $('#alert-success').show();
-
-            setTimeout(function () {
-                $('#alert-success').hide();
-            }, 1000);
-
-            //close alert box
-            $('.btn-close').click(function () {
-                $('#alert-success').hide();
-            });
-        }
 
 
         // For Employee Register
@@ -527,7 +500,34 @@
 
     });
 
+    function showError(message) {
+        $('#error-message').text(message);
+        $('#alert-danger').show();
 
+        setTimeout(function () {
+            $('#alert-danger').hide();
+        }, 3000);
+
+        //close alert box
+        $('.btn-close').click(function () {
+            $('#alert-danger').hide();
+        });
+    }
+
+    //function show success with parameter message
+    function showSuccess(message) {
+        $('#success-message').text(message);
+        $('#alert-success').show();
+
+        setTimeout(function () {
+            $('#alert-success').hide();
+        }, 3000);
+
+        //close alert box
+        $('.btn-close').click(function () {
+            $('#alert-success').hide();
+        });
+    }
 </script>
 <script src="/js/notification.js" type="module"></script>
 </body>
