--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -294,6 +294,71 @@
                }
            });
 
+        //Get KPI chart Canvas
+        const p2ctx = document.getElementById("productivity-2-chart").getContext('2d');
+
+        const initialKpiData = {
+            labels:["KPI"],
+            datasets: [{
+                label: 'Review KPI',
+                data: [],
+                backgroundColor: '#444cf7',
+                borderColor: '#444cf7',
+                borderWidth: 1,//border width
+                fill: false,
+            },
+                {
+                    label: 'Detail KPI',
+                    data: [],
+                    backgroundColor: '#d8077c',
+                    borderColor: '#e5e5f7',
+                    borderWidth: 1,//border width
+                    fill: false,
+                },
+                {
+                    label: 'Coding KPI',
+                    data: [],
+                    backgroundColor: '#288f0b',
+                    borderColor: '#e5e5f7',
+                    borderWidth: 1,//border width
+                    fill: false,
+                },
+                {
+                    label: 'UnitTest KPI',
+                    data: [],
+                    backgroundColor: '#b7620d',
+                    borderColor: '#e5e5f7',
+                    borderWidth: 1,//border width
+                    fill: false,
+                },
+                {
+                    label: 'IntegratedTest KPI',
+                    data: [],
+                    backgroundColor: '#14b9c5',
+                    borderColor: '#e5e5f7',
+                    borderWidth: 1,//border width
+                    fill: false,
+                }
+
+            ]
+        }
+
+        //Create bar chart for p2ctx with screenToReviewRatios
+        const barChart2 = new Chart(p2ctx, {
+            type: 'bar',
+            data: initialKpiData,
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+                scales: {
+                    y: {
+                        beginAtZero: true,
+                        max: 250,
+                    }
+                }
+            }
+        });
+
         // Make an AJAX request to fetch the department list
         $.ajax({
             url: '/api/department/list', // Replace with your API endpoint
@@ -356,6 +421,7 @@
                         console.log(selectedValue)
                         updateManMonthChart(selectedValue)
                         updateProductivityChart(selectedValue)
+                        updateKpiChart(selectedValue)
                     });
 
 
@@ -416,9 +482,31 @@
             });
         }
 
-        function updateKpiChart(selectedValue){
+        function updateKpiChart(selectedValue) {
+            $.ajax({
+                url: `api/dashboard/kpi/project/${selectedValue}`,
+                method: 'GET',
+                dataType: 'json',
+                success: function (data) {
 
+                    barChart2.data.datasets.forEach((dataset, index) => {
+                        const label = dataset.label.toLowerCase().replace(" ", "_");
+                        dataset.data.push(data[label]);
+                    });
+
+                    // Update the chart options
+                    barChart2.options.scales.y.min = 0;
+                    barChart2.options.scales.y.max = 250;
+
+                    // Update the chart
+                    barChart2.update();
+                },
+                error: function (error) {
+                    console.error('Error fetching data:', error);
+                }
+            });
         }
+
 
         $('.chart-filter-reset-btn').on('click', function () {
             $('#departmentDropDown').text('Select Department');
@@ -436,49 +524,7 @@
         });
 
 
-        //Get KPI chart Canvas
-        const p2ctx = document.getElementById("productivity-2-chart").getContext('2d');
 
-        //Create bar chart for p2ctx with screenToReviewRatios
-        const barChart2 = new Chart(p2ctx, {
-            type: 'line',
-            data: {
-                labels: months,
-                datasets: [
-                    {
-                        label: "Screen Counts",
-                        data: screenCountsData,
-                        backgroundColor: "rgba(75, 192, 192, 0.2)",
-                        borderColor: "rgba(75, 192, 192, 1)",
-                        borderWidth: 1,
-                    },
-                    {
-                        label: "Test Cases",
-                        data: testCasesData,
-                        backgroundColor: "rgba(192, 75, 75, 0.2)",
-                        borderColor: "rgba(192, 75, 75, 1)",
-                        borderWidth: 1,
-                    },
-                    {
-                        label: "KSTEP",
-                        data: kStepData,
-                        backgroundColor: "rgba(75, 75, 192, 0.2)",
-                        borderColor: "rgba(75, 75, 192, 1)",
-                        borderWidth: 1,
-                    },
-                ],
-            },
-            options: {
-                responsive: true,
-                maintainAspectRatio: false,
-                scales: {
-                    y: {
-                        beginAtZero: true,
-                        max: 100,
-                    }
-                }
-            }
-        });
 
 
         //get user counts by api/user/count/all
