--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -949,31 +949,39 @@
                     current_phase: document.querySelector("#edit-project-phase").value,
                     objective: editObjectiveEditor.root.innerHTML
                 }
+                Swal.fire({
+                    title: "Are you sure want to edit?",
+                    icon: "warning",
+                    showCancelButton: true,
+                    confirmButtonColor: "#3085d6",
+                    cancelButtonColor: "#d33",
+                    confirmButtonText: "Yes"
+                }).then((result) => {
+                    if (result.isConfirmed) {
 
 
+                        console.log(project)
 
-
-
-                console.log(project)
-
-                $.ajax({
-                    url: `/api/project/update`, // Replace with the actual URL for your project registration endpoint
-                    type: "PUT",
-                    data: JSON.stringify(project),
-                    dataType: "json",
-                    contentType: "application/json; charset=utf-8",
-                    success: async function (data) {
-                        alert("Project registered successfully");
-                        // Reset the form if needed
-                        console.log("this projce has benn saved", data);
-                        // event.currentTarget.submit();
-                        window.top.location = window.top.location;
-                    },
-                    error: function (data) {
-                        alert("Error registering project");
-                        // event.currentTarget.submit();
-                        window.top.location = window.top.location;
-                    },
+                        $.ajax({
+                            url: `/api/project/update`, // Replace with the actual URL for your project registration endpoint
+                            type: "PUT",
+                            data: JSON.stringify(project),
+                            dataType: "json",
+                            contentType: "application/json; charset=utf-8",
+                            success: async function (data) {
+                                alert("Project registered successfully");
+                                // Reset the form if needed
+                                console.log("this projce has benn saved", data);
+                                // event.currentTarget.submit();
+                                window.top.location = window.top.location;
+                            },
+                            error: function (data) {
+                                alert("Error registering project");
+                                // event.currentTarget.submit();
+                                window.top.location = window.top.location;
+                            },
+                        });
+                    }
                 });
             })
 
@@ -989,24 +997,36 @@
                     integrated_testing: parseInt(document.querySelector("#edit-integrated-testing-count").value)
                 }
 
-                $.ajax({
-                    url: `/api/project/update/amount/${projectId}`, // Replace with the actual URL for your project registration endpoint
-                    type: "PUT",
-                    data: JSON.stringify(amountDto),
-                    dataType: "json",
-                    contentType: "application/json; charset=utf-8",
-                    success: async function (data) {
-                        alert("Project registered successfully");
-                        // Reset the form if needed
-                        console.log("this projce has benn saved", data);
-                        // event.currentTarget.submit();
-                        window.top.location = window.top.location;
-                    },
-                    error: function (data) {
-                        alert("Error registering project");
-                        // event.currentTarget.submit();
-                        window.top.location = window.top.location;
-                    },
+                Swal.fire({
+                    title: "Are you sure want to edit?",
+                    icon: "warning",
+                    showCancelButton: true,
+                    confirmButtonColor: "#3085d6",
+                    cancelButtonColor: "#d33",
+                    confirmButtonText: "Yes"
+                }).then((result) => {
+                    if (result.isConfirmed) {
+
+                        $.ajax({
+                            url: `/api/project/update/amount/${projectId}`, // Replace with the actual URL for your project registration endpoint
+                            type: "PUT",
+                            data: JSON.stringify(amountDto),
+                            dataType: "json",
+                            contentType: "application/json; charset=utf-8",
+                            success: async function (data) {
+                                alert("Project registered successfully");
+                                // Reset the form if needed
+                                console.log("this projce has benn saved", data);
+                                // event.currentTarget.submit();
+                                window.top.location = window.top.location;
+                            },
+                            error: function (data) {
+                                alert("Error registering project");
+                                // event.currentTarget.submit();
+                                window.top.location = window.top.location;
+                            },
+                        });
+                    }
                 });
             })
 
@@ -2852,7 +2872,7 @@
                                                                 type="date"
                                                                 class="form-control"
                                                                 id="start-date"
-                                                                required
+                                                                disabled required
                                                             />
                                                         </div>
                                                     </div>
@@ -3088,47 +3108,20 @@
                                                 </div>
                                             </div>
 
-                                            <div
-                                                class="tab-pane fade pt-3"
-                                                id="review"
-                                            >
+                                            <div class="tab-pane fade pt-3" id="review">
                                                 <div class="row mb-3">
-                                                    <label
-                                                        for="project-external-review-count"
-                                                        class="col-md-4 col-lg-3 col-form-label"
-                                                        >External Review</label
-                                                    >
-                                                    <div
-                                                        class="col-md-8 col-lg-9"
-                                                    >
-                                                        <input
-                                                            name="project_name"
-                                                            type="number"
-                                                            class="form-control"
-                                                            min="0"
-                                                            id="project-external-review-count"
-                                                            oninput="validity.valid||(value='');"
-                                                        />
+                                                    <label for="project-external-review-count" class="col-md-4 col-lg-3 col-form-label">External Review</label>
+                                                    <div class="col-md-8 col-lg-9">
+                                                        <input name="project_name" type="number" class="form-control" min="0"
+                                                            id="project-external-review-count" oninput="validity.valid||(value='');"/>
                                                     </div>
                                                 </div>
 
                                                 <div class="row mb-3">
-                                                    <label
-                                                        for="project-internal-review-count"
-                                                        class="col-md-4 col-lg-3 col-form-label"
-                                                        >Internal Review</label
-                                                    >
-                                                    <div
-                                                        class="col-md-8 col-lg-9"
-                                                    >
-                                                        <input
-                                                            name="project_name"
-                                                            type="number"
-                                                            min="0"
-                                                            class="form-control"
-                                                            oninput="validity.valid||(value='');"
-                                                            id="project-internal-review-count"
-                                                        />
+                                                    <label for="project-internal-review-count" class="col-md-4 col-lg-3 col-form-label">Internal Review</label>
+                                                    <div class="col-md-8 col-lg-9">
+                                                        <input name="project_name" type="number" min="0" class="form-control"
+                                                            oninput="validity.valid||(value='');" id="project-internal-review-count"/>
                                                     </div>
                                                 </div>
                                                 <div class="text-center">
